# getid-bot

./: .env.example  .gitignore  AGENTS.MD  CODEX_PROMPT.md  MARKET_ANALYSIS.md  Procfile  README.md  SKILLS.MD  pyproject.toml  railway.json
docs/: launch.md  user-guide.md
src/getid_bot/: __main__.py  bot.py  config.py  formatters.py  handlers.py  help_texts.py  keyboards.py  observability.py  redaction.py
tests/: test_formatters.py  test_keyboards.py  test_redaction.py
