[project]
name = "getid-bot"
version = "0.1.0"
description = "Privacy-first Telegram diagnostics bot for IDs, chats, topics and raw updates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.16,<4",
    "pydantic-settings>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.8,<1",
]

[project.scripts]
getid-bot = "getid_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

